[package]
name = "cargo-which-nightly"
version = "0.2.2"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Find the latest Rust nightly with combinations of features present."
repository = "https://github.com/cdown/cargo-which-nightly"
readme = "README.md"
keywords = ["cargo", "update", "plugin", "subcommand"]
categories = ["development-tools::cargo-plugins"]
license = "MIT"
rust-version = "1.64.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["std", "derive", "help"], default-features = false }
current_platform = "0.2.0"
rayon = "1.8.1"
serde_json = { version = "1.0.108", default-features = false }
ureq = { version = "2.9.1", features = ["json", "tls"], default-features = false }
